# ImageProcessor

./: .gitignore  CMakeLists.txt  README.md  design.md
include/: Pixel.hpp
test/: PixelTest.cpp
